<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">DressApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- Display Titles -->
    
    <string name="title_camera_display">Take a picture</string>
    <string name="title_cloth_form">Cloth</string>
    <string name="title_all_clothes">All clothes</string>
    <string name="title_login">Log in</string>
    <string name="title_inscription">Inscription</string>
    <string name="title_menu">Your wardrobe</string>
    
    <!-- Taken picture strings -->
    
    <string name="button_take_a_picture">Take a picture !</string>
    <string name="contentDescription_taken_picture">Taken picture from camera</string>
    
    <!-- Cloth Form labels -->
    
    <string name="label_name">Name</string>
    <string name="hint_name">Name of your cloth</string>
    <string name="label_type">Type</string>
    <string name="label_occasion">Occasion</string>
    <string name="label_colors">Colors</string>
    <string name="label_season">Season</string>
    <string name="button_cloth_form_submit">Save cloth</string>
    <string name="button_cloth_form_edit">Edit cloth</string>
    <string name="button_cloth_form_cancel">Cancel</string>
    <string name="button_cloth_form_delete">Delete item</string>
    
    <!-- String arrays for cloth form spinners -->
    
    <string-array name="spinner_colors">
        <item>None</item>
        <item>Black</item>
        <item>Blue</item>
        <item>Brown</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Pink</item>
        <item>Purple</item>
        <item >Red</item>  
        <item >White</item>
        <item>Yellow</item>
    </string-array>
    
    <string-array name="spinner_type">
        <item>Accessory</item>
        <item>Bottom</item>
        <item>Dress/Full body</item>
        <item>Shoes</item>
        <item>Top</item>
    </string-array>
    
    <string-array name="spinner_occasion">
        <item>Various styles</item>
        <item>Beach/Pool</item>
        <item>Casual</item>
        <item>Formal</item>
        <item>Home</item>
        <item>Party</item>
        <item>Sport</item>
        <item>Study/Work</item>
    </string-array>
    
    <string-array name="spinner_seasons">
        <item>All seasons</item>
        <item>Spring</item>
        <item>Summer</item>
        <item>Fall</item>
        <item>Winter</item>
    </string-array>
    
    <!-- All clothes display -->
    
    <string name="button_view_all_clothes">View all clothes</string>
    
    <!-- Login form -->
    
    <string name="login_welcome">Welcome to DressApp !</string>
    <string name="login_subtitle">Your digital wardrobe</string>
    <string name="login_introduction">Please log in to DressApp.</string>
    <string name="login_or">or</string>
    
    <string name="button_sign_in">Sign in</string>
    <string name="button_register">Register</string>
    
    <!-- Inscription form -->
    
    <string name="inscription_welcome">Welcome to DressApp,\nyour digital wardrobe !</string>
    <string name="inscription_introduction">Create an account and start saving your own clothes !</string>
    <string name="inscription_information">Please fill the inscription form.</string>
    <string name="inscription_mail_example">yourmail@example.com</string>
    
    <string name="button_create_my_account">Create my account !</string>
    <string name="button_login_another_account">Log in with another account</string>
    
    <string name="label_username">Username</string>
    <string name="label_email">E-mail</string>
    <string name="label_password">Password</string>
    
    </resources>
