<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:background="#40ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/inscriptionWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:text="@string/inscription_welcome"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/inscriptionIntroduction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:text="@string/inscription_introduction"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/inscriptionInformation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:gravity="center_horizontal"
            android:text="@string/inscription_information"
            android:textSize="12sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/labelUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/label_username" />

        <EditText
            android:id="@+id/fieldUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/label_username"
            android:textColorHint="#840135" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/labelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/label_email" />

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/inscription_mail_example"
            android:inputType="textEmailAddress"
            android:textColorHint="#840135" />

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/label_password" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:ems="10"
            android:hint="@string/label_password"
            android:inputType="textPassword"
            android:textColorHint="#840135" />
        
        <Button
	        android:id="@+id/buttonSubmit"
	        android:layout_width="match_parent"
	        android:layout_height="55dp"
	        android:layout_margin="5dp"
	        android:text="@string/button_create_my_account"
	        android:textColor="@android:color/white"
	        android:background="#70840135" />
	
	    <Button
	        android:id="@+id/buttonCancel"
	        android:layout_width="match_parent"
	        android:layout_height="55dp"
	        android:layout_margin="5dp"
	        android:text="@string/button_login_another_account"
	        android:textColor="@android:color/white"
	        android:background="#70000000" />
    </LinearLayout>

</ScrollView>
