<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/paper_3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:src="@drawable/mannequin_rose"
        android:contentDescription="@string/app_name" />

    <ImageButton
        android:id="@+id/buttonTakePicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/buttonViewAllClothes"
        android:layout_alignTop="@+id/imageView1"
        android:layout_marginTop="49dp"
        android:contentDescription="@string/button_take_a_picture"
        android:paddingBottom="32dp"
        android:paddingLeft="17dp"
        android:paddingRight="17dp"
        android:paddingTop="31dp"
        android:src="@drawable/appareil_photo" />

    <ImageButton
        android:id="@+id/buttonViewAllClothes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/buttonTakePicture"
        android:layout_marginRight="22dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/button_view_all_clothes"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:src="@drawable/armoire" />

</RelativeLayout>